show asana status

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   </head>
   <body>
     <script type="text/x-handlebars">
+      <h3>{{Asana.status}}</h3>
       {{view Woodpecker.loader.view}}
       {{view Woodpecker.date.view}}
       {{#view Ember.View controllerBinding=Woodpecker.menu}}
